src/v8_c_bridge.h

typedef void* IsolatePtr;
typedef void* ContextPtr;
typedef void* PersistentValuePtr;
typedef void* FunctionTemplate;
// typedef void* FunctionCallback;

typedef struct {
    const char* ptr;
    int len;
} String;
typedef String Error;
typedef String StartupData;
typedef struct {
    size_t total_heap_size;
    size_t total_heap_size_executable;
    size_t total_physical_size;
    size_t total_available_size;
    size_t used_heap_size;
    size_t heap_size_limit;
    size_t malloced_memory;
    size_t peak_malloced_memory;
    size_t does_zap_garbage;
} HeapStatistics;
typedef struct {
    PersistentValuePtr Value;
    Error error_msg;
} ValueErrorPair;
typedef struct { int Major, Minor, Build, Patch; } Version;
// v8_init must be called once before anything else.
extern void v8_init();
extern IsolatePtr v8_Isolate_New(StartupData data);
extern ContextPtr v8_Isolate_NewContext(IsolatePtr isolate);
extern void       v8_Isolate_Release(IsolatePtr isolate);
extern HeapStatistics       v8_Isolate_GetHeapStatistics(IsolatePtr isolate);
extern PersistentValuePtr v8_Context_Global(ContextPtr ctx);
extern void               v8_Context_Release(ContextPtr ctx);
extern Version v8_Version();
extern void   v8_Value_Release(ContextPtr ctx, PersistentValuePtr value);